# salesforce-file-ICA

./: .env  pyproject.toml  schemas.py  server.py
templates/: response_template_attach_file.jinja  upload_template.html
upload_file/: Readme.txt
