[project]
name = "fastapi-backend"
version = "0.0.1"
description = "A fastapi-backend Server for ICA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.9",
    "pydantic>=2.11.6",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "jinja2>=3.1.5",
    "requests>=2.32.4",
    "requests-file>=3.0.0",
    "requests-toolbelt>=1.0.0",
    "python-multipart>=0.0.20",
    "simple-salesforce>=1.12.9",
    "Flask>=3.1.2",
    "flask-resources>=1.2.0",
    "Flask-RESTful>=0.3.10",
    "charset-normalizer>=3.4.3",
    "Werkzeug>=3.1.3",
]
